Workaround in CMakeLists.txt to avoid a bug in KDL (http://bugs.orocos.org/show_bug.cgi?id=1035)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,10 @@ if (NOT MSVC)
 endif()
 
 include_directories(include ${EIGEN3_INCLUDE_DIR} ${Orocos-KDL_INCLUDE_DIRS})
+#workaround for KDL CMake bug, check http://bugs.orocos.org/show_bug.cgi?id=1035
+link_directories(${Orocos-KDL_LIBRARY_DIRS})
+message("Library dirs for Orocos-KDL " ${Orocos-KDL_LIBRARY_DIRS})
+message("Include directories for Orocos-KDL " ${Orocos-KDL_INCLUDE_DIRS}) 
 
 file(GLOB KDL_CODYCO_SRC
     "src/*.cpp"
@@ -52,8 +56,6 @@ file(GLOB KDL_CODYCO_SRC
 
 #Temporary workaround to compile on MacOsX
 add_library(kdl_codyco SHARED ${KDL_CODYCO_SRC})
-
-
 target_link_libraries(kdl_codyco ${Orocos-KDL_libraries})
 
 # --------------------------------
