--- a/cmake/kdl_codyco-config.cmake.in
+++ b/cmake/kdl_codyco-config.cmake.in
@@ -13,16 +13,23 @@ ENDIF (kdl_codyco_FIND_REQUIRED)
 find_package(Eigen3 3.0 QUIET)
 # find kdl_codyco itself
 
-message( "Looking for kdl_codyco in: @CMAKE_INSTALL_PREFIX@")
-set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" "${Orocos-KDL_INCLUDE_DIRS}" "${Eigen3_INCLUDE_DIRS}" )
-set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" "${Orocos-KDL_LIBRARY_DIRS}" )
-set(kdl_codyco_LIBRARY_RELEASE "kdl_codyco")
-set(kdl_codyco_LIBRARY_DEBUG "kdl_codycod")
-set(kdl_codyco_LIBRARIES optimized "${kdl_codyco_LIBRARY_RELEASE}" debug "${kdl_codyco_LIBRARY_DEBUG}")
 
 IF(MSVC)
+    message( "Looking for kdl_codyco in: @CMAKE_INSTALL_PREFIX@")
+    set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" "${Orocos-KDL_INCLUDE_DIRS}" "${Eigen3_INCLUDE_DIRS}" )
+    set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" "${Orocos-KDL_LIBRARY_DIRS}" )
+    set(kdl_codyco_LIBRARY_RELEASE "kdl_codyco")
+    set(kdl_codyco_LIBRARY_DEBUG "kdl_codycod")
+    set(kdl_codyco_LIBRARIES optimized "${kdl_codyco_LIBRARY_RELEASE}" debug "${kdl_codyco_LIBRARY_DEBUG}")
    set(CMAKE_DEBUG_POSTFIX "d")
-ENDIF(MSVC)
+ELSE()
+    message( "Looking for kdl_codyco in: @CMAKE_INSTALL_PREFIX@")
+    set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" "${Orocos-KDL_INCLUDE_DIRS}" "${Eigen3_INCLUDE_DIRS}" )
+    set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" "${Orocos-KDL_LIBRARY_DIRS}" )
+    set(kdl_codyco_LIBRARY "kdl_codyco")
+    set(kdl_codyco_LIBRARIES "${kdl_codyco_LIBRARY}")
+ 
+ENDIF()
 
 set(kdl_codyco_FOUND TRUE)
 IF( kdl_codyco_FOUND )
