--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: cpp
-script:
-  - cmake 
-  - make
+
+compiler:
+  - gcc
+
+before_script:
+  - mkdir build
+  - cd build
+  - cmake ..
+
+script: make
