--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ compiler:
   - gcc
 
 before_script:
+  - git clone https://github.com/traversaro/orocos_kinematics_dynamics
+  - cd orocos_kinematics_dynamics/orocos_kdl
+  - mkdir build 
+  - cd build
+  - ccmake ../
+  - make
+  - sudo make install
+  - cd ../../..
   - sudo apt-get install -qq libeigen3-dev 
   - mkdir build
   - cd build
