--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_script:
   - cd ../../..
   - mkdir build
   - cd build
-  - cmake -DCREATE_TESTS:BOOL=ON ..
+  - cmake -DCREATE_TESTS:BOOL=ON ./..
 
 script: make && make test
