--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ file(GLOB DRRL_SRC
 if(MSVC)
     set(LIB_TYPE STATIC)
 else()
-    set(LIB_TYPE STATIC)
+    set(LIB_TYPE SHARED)
 endif()
 
 add_library(kdl_codyco ${LIB_TYPE} ${KDL_CODYCO_SRC} ${DRRL_SRC})
