--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,84 +37,81 @@ include_directories(SYSTEM  ${Orocos-KDL_INCLUDE_DIRS})
 IF( ENABLE_URDF ) 
     find_package(TinyXML)
     IF( NOT TinyXML_FOUND )
-        message("Disabling URDF support as no TinyXML was found");
-        set(ENABLE_URDF FALSE);
+        message("Disabling URDF support as no TinyXML was found")
+        set(ENABLE_URDF FALSE)
     ELSE()
          include_directories(SYSTEM ${TinyXML_INCLUDE_DIRS})
-    END()
-END()
+    ENDIF()
+ENDIF()
 
 IF( ENABLE_URDF ) 
     find_package(urdfdom_headers)
     IF( NOT urdfdom_headers_CONFIG_INCLUDED )
-        message("Disabling URDF support as no urdfdom_headers was found");
-        set(ENABLE_URDF FALSE);
+        message("Disabling URDF support as no urdfdom_headers was found")
+        set(ENABLE_URDF FALSE)
     ELSE()
         include_directories(SYSTEM ${urdfdom_headers_INCLUDE_DIRS})
-    END()
-END()
+    ENDIF()
+ENDIF()
 
 IF( ENABLE_URDF ) 
     find_package(urdfdom)
     IF( NOT urdfdom_CONFIG_INCLUDED )
-        message("Disabling URDF support as no urdfdom was found");
-        set(ENABLE_URDF FALSE);
+        message("Disabling URDF support as no urdfdom was found")
+        set(ENABLE_URDF FALSE)
     ELSE()
         include_directories(SYSTEM ${urdfdom_INCLUDE_DIRS})
-    END()
-END()
+    ENDIF()
+ENDIF()
 
 IF( ENABLE_URDF ) 
     find_package(console_bridge)
     IF( NOT ${console_bridge_CONFIG_INCLUDED} )
-        message("Disabling URDF support as no console_bridge was found");
-        set(ENABLE_URDF FALSE);
+        message("Disabling URDF support as no console_bridge was found")
+        set(ENABLE_URDF FALSE)
     ELSE()
         include_directories(SYSTEM ${console_bridge_INCLUDE_DIRS})
         link_directories(${console_bridge_LIBRARY_DIRS})    
-    END()
-END()
+    ENDIF()
+ENDIF()
 
 IF( ENABLE_URDF ) 
-        find_package(Boost thread)
+        find_package(Boost REQUIRED thread)
     IF( NOT ${Boost_FOUND} )
-        message("Disabling URDF support as no Boost was found");
-        set(ENABLE_URDF FALSE);
+        message("Disabling URDF support as no Boost was found")
+        set(ENABLE_URDF FALSE)
     ELSE()
         include_directories(SYSTEM ${console_bridge_INCLUDE_DIRS})
         link_directories(${console_bridge_LIBRARY_DIRS}) 
-    END()
-END()
+    ENDIF()
+ENDIF()
 
 include_directories(include)
 
 
                      
 if(ENABLE_URDF) 
-    set(URDF_SRCS src/urdf_export.cpp src/urdf_import.cpp)
-    set(URDF_LIBS ${console_bridge_LIBRARIES} ${Boost_LIBRARIES})
-end()
+    set(URDF_SRCS src/converters/urdf_export.cpp src/converters/urdf_import.cpp)
+    set(URDF_LIBS ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES})
+endIF()
 
 if(ENABLE_SYMORO_PAR)
     set(EXPR_PARSER_SRCS src/expression_parser/error.cpp
                      src/expression_parser/functions.cpp
                      src/expression_parser/parser.cpp
                      src/expression_parser/variablelist.cpp)
-    set(SYMORO_PAR_SRCS src/symoro_par_import.cpp ${EXPR_PARSER_SRCS})
-end()
+    set(SYMORO_PAR_SRCS src/converters/symoro_par_import.cpp ${EXPR_PARSER_SRCS})
+endif()
 
 add_library(kdl_format_io SHARED ${URDF_SRCS} ${SYMORO_PAR_SRCS})
 
 target_link_libraries(kdl_format_io ${URDF_LIBS}  ${Orocos-KDL_LIBRARIES})
 
-add_executable(check_kdl_urdf_import src/urdf/check_kdl_urdf_import.cpp src/urdf/kdl_import.cpp)
-target_link_libraries(check_kdl_import ${urdfdom_headers_LIBRARIES}  ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES} ${Orocos-KDL_LIBRARIES})
 
-add_executable(check_symoro_par_import src/symoro_par/check_symoro_par_import.cpp src/symoro_par/symoro_par_import.cpp ${EXPR_PARSER_SRCS})
-target_link_libraries(check_symoro_par_import ${Orocos-KDL_LIBRARIES})
-
-add_executable(par2urdf src/utils/par2urdf.cpp)
-target_link_libraries(par2urdf kdl_format_io ${urdfdom_headers_LIBRARIES}  ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES} ${Orocos-KDL_LIBRARIES})
+IF( ENABLE_URDF AND ENABLE_SYMORO_PAR )
+    add_executable(par2urdf src/utils/par2urdf.cpp)
+    target_link_libraries(par2urdf kdl_format_io ${URDF_LIBS} ${Orocos-KDL_LIBRARIES})
+ENDIF()
 
 #add_executable(check_kdl_export src/check_kdl_export.cpp src/kdl_import.cpp src/kdl_export.cpp)
 #target_link_libraries(check_kdl_export ${kdl_format_io_LIBRARIES} ${urdfdom_headers_LIBRARIES}  ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES} ${Orocos-KDL_LIBRARIES})
@@ -141,6 +138,13 @@ if (NOT MSVC)
   configure_file("${pkg_conf_file}.in" "${pkg_conf_file}" @ONLY)
   install(FILES ${pkg_conf_file} DESTINATION lib/pkgconfig/ COMPONENT pkgconfig)
 endif()
+
+option(CREATE_TESTS "Create regression tests using CMake" FALSE)
+
+IF(CREATE_TESTS)
+    enable_testing()
+    ADD_SUBDIRECTORY(tests)
+ENDIF(CREATE_TESTS)
 
 
 message(STATUS "Configuration successful. Type make to compile kdl_format_io")
