Added support for CRBA (Mass Matrix) and coriolis/gravity torques, both floating base and fixed base

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,11 +4,18 @@ include_directories(${EIGEN3_INCLUDE_DIR} ${Orocos-KDL_INCLUDE_DIRS} ${kdl_codyc
 add_executable(inverse_inertia_test inverse_inertia.cpp)
 add_executable(regressor_utils_test regressor_utils_test.cpp)
 add_executable(subtree_regressor_test subtree_regressor_test.cpp testhumanoid.cpp)
+add_executable(inversedynamics_regressor_test inversedynamics_regressor_test.cpp testhumanoid.cpp)
+add_executable(inversedynamics_crba_test inversedynamics_crba_test.cpp testhumanoid.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 
 target_link_libraries(inverse_inertia_test ${Orocos-KDL_LIBRARIES} kdl_codyco )
 target_link_libraries(regressor_utils_test ${Orocos-KDL_LIBRARIES} kdl_codyco )
 target_link_libraries(subtree_regressor_test ${Orocos-KDL_LIBRARIES} kdl_codyco )
+target_link_libraries(inversedynamics_regressor_test orocos-kdl kdl_codyco )
+target_link_libraries(inversedynamics_crba_test orocos-kdl kdl_codyco )
+
 
 add_test(test_inverse_inertia inverse_inertia_test)
 add_test(test_regressor_utils regressor_utils_test)
 add_test(test_subtree_regressor subtree_regressor_test)
+add_test(test_inversedynamics_regressor inversedynamics_regressor_test)
+add_test(test_inversedynamics_crba inversedynamics_crba_test)
