Added fixed base dynamics regressor and support for torque regressors in DynamicRegressorsGenerator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ target_link_libraries(kdl_codyco ${Orocos-KDL_LIBRARIES})
 # --------------------------------
 INSTALL(TARGETS kdl_codyco EXPORT kdl_codyco-target DESTINATION lib)
 INSTALL(DIRECTORY include/kdl_codyco DESTINATION include) 
-INSTALL(DIRECTORY include/drrl       DESTINATION include)
+INSTALL(DIRECTORY include/dirl       DESTINATION include)
 
 option(CREATE_TESTS "Create regression tests using CMake" FALSE)
 
