--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - cd ../../..
   - git clone https://github.com/traversaro/kdl_codyco
   - cd kdl_codyco
+  - git checkout experimental
   - mkdir build
   - cd build
   - cmake ../
